[package]
name = "speeduino-to-mqtt"
version = "0.1.4"
edition = "2021"

[dependencies]
serialport = "4.6.1"
config = "0.15.5"
paho-mqtt = "0.12.5"
futures = "0.3.31"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
openssl = { version = "0.10.68", features = ["vendored"] }
gumdrop = "0.8.1"
atty = "0.2.14"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.15.0"