[package]
name = "speeduino-to-mqtt"
version = "0.2.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.4"
futures-util = "0.3"

# Configuration
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MQTT
paho-mqtt = "0.13.3"
openssl = { version = "0.10.75", features = ["vendored"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Signal handling for graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# CLI
gumdrop = "0.8.1"
atty = "0.2.14"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.23.0"